# NDI-Mic-Mute-Monitor

./: .gitignore  404.html  BUILD.md  LICENSE  NDI_Shure_Monitor.spec  README.md  build_app.sh  config.example.json  fake_shure.py  hook-NDIlib.py  icon.icns  index.html  install_ndi.sh  main.py  mkdocs.yml  monitor_manager.py  ndi_worker.py  pyproject.toml  reproduce_blink.py  requirements.txt  shure_client.py  sitemap.xml  state.py  web_server.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-release.yml  ci.yml  docs.yml
configuration/: index.html
docs/: configuration.md  index.md  protocols.md
protocols/: index.html
search/: search_index.json
tests/: test_api.py  test_monitor_manager.py  test_state.py
