[project]
name = "ndi-shure-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "ndi-python>=5.1.1.5",
    "numpy>=2.0.2",
    "pygame>=2.6.1",
    "pytest>=8.4.2",
    "uvicorn>=0.39.0",
]
