[project]
name = "ndi-shure-monitor"
version = "0.1.0"
description = "Monitors Shure wireless receivers and broadcasts mute status as an NDI video feed"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "numpy>=2.0.2",
    "pygame>=2.6.1",
    "pytest>=8.4.2",
    "uvicorn>=0.39.0",
]

[project.optional-dependencies]
# Install with: uv sync --all-extras (requires NDI SDK to be installed first)
ndi = [
    "ndi-python>=5.1.1.5",
]
