[project]
name = "ndi-shure-monitor"
version = "0.2.0"
description = "Monitors Shure wireless receivers and broadcasts mute status as an NDI video feed"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "numpy>=2.0.2",
    "pygame>=2.6.1",
    "pytest>=8.4.2",
    "python-osc>=1.8.3",
    "uvicorn>=0.39.0",
]

[project.optional-dependencies]
# Install with: uv sync --all-extras (requires NDI SDK to be installed first)
# ndi-python only has a macOS wheel on PyPI; Windows builds run in mock mode
ndi = [
    "ndi-python>=5.1.1.5 ; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pytest-cov>=7.1.0",
]
